# rust-simple-classification-nlp

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  format.yml  lint.yml  release.yml  setup.yml  test.yml
src/: config.rs  lib.rs
src/io/: dataset.rs
src/model/: classifier.rs  mod.rs  train_utils.rs
src/postprocessing/: interpret.rs  metrics.rs  mod.rs
src/preprocessing/: mod.rs  tokenize.rs  vocab.rs
