[package]
name = "simple-nlp-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tch = "0.17.0"
tracing = "0.1"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.140"
rand= "0.8.0"
fs = "0.0.5"
